Added main.js to run client app in electron. Updated package.json to reflect new electron usage.

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,9 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Calling Python from Electron!</title>
+    <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 
 <body>
+    <h1>Hello World!</h1>
+
+    <p>We are using node <script>document.write(process.versions.node)</script>,
+    Chrome <script>document.write(process.versions.chrome)</script>,
+    and Electron <script>document.write(process.versions.electron)</script>.</p>
+    </br/>
+
     <h1>Simple Python Calculator!</h1>
     <p>Input something like <code>1 + 1</code>.</p>
     <input id="input" value="1 + 1"></input>
